# personal-slack-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/agents/: personal-ai-executor.md  personal-ai-planner.md  personal-ai-reviewer.md  personal-ai-verifier.md
.cursor/commands/: agent-executor.md  agent-fix-after-verify.md  agent-pipeline.md  agent-planner.md  agent-reviewer.md  agent-skills.md  agent-verifier.md
.cursor/rules/: ai-agent-loop-and-state.mdc  code-generation-standards.mdc  multi-agent-four-role-pipeline.mdc  personal-ai-role-and-process.mdc  security-and-observability.mdc  slack-hitl-voice.mdc  system-architecture-modules.mdc  tech-stack-defaults.mdc  web-automation-playwright.mdc
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_tasks_lifecycle.py  002_checkpoints.py  003_task_cancel_request.py  004_approvals.py  005_context_and_audit.py
config/: approval_policy.example.json
docs/: encryption-at-rest.md  product-prd.md  resume-contract.md  slack-bot.md  system-architecture.md
docs/runbooks/: deployment.md  (+1 more)
personal_ai/: __init__.py
planning/: agent-validation.md  dependencies.json  epics.md  implementation-order.md  phases.md  subtasks.md  tasks.md  test-plan.md
scripts/: acceptance_demo.sh  measure_submit_latency.py
tests/: conftest.py  test_ai_contract_parsing.py  test_batch1.py  test_batch2.py  test_batch3.py  test_batch4.py  test_batch5.py  test_batch6.py  test_batch7.py  test_batch8.py  test_batch9.py  test_context_and_audit.py  test_state_machine.py
(+77 files in other folders)
