[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Personal AI Assistant — orchestrator, agents, Slack"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.0",
    "playwright>=1.49.0",
    "redis>=5.2.0",
    "alembic>=1.14.0",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "slack-bolt>=1.21.0",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.25.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["personal_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: tests that need Playwright browsers or similar (opt-in via env).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
